--- a/tributePage/index.html
+++ b/tributePage/index.html
@@ -1,6 +1,7 @@
 <DOCKTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.css">
         <link rel="stylesheet" href="css/styles.css">
         Winnie The Pooh
     </head>
